challenge 7 fix spacing and change colors

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 h1 {
   font-size: 60px;
   font-weight: 300;
+  margin-top: 0;
 }
 
 h1 .title {
@@ -29,6 +30,7 @@ h1 .title {
 h2 {
   font-size: 42px;
   font-weight: 300;
+  margin-top: 0;
 }
 
 h2 .title {
@@ -37,9 +39,11 @@ h2 .title {
 
 h3 {
   font-size: 36px;
+  margin: 0px;
 }
 
 .small {
+  margin-top: 0;
   font-size: 16px;
 }
 
@@ -63,9 +67,15 @@ header {
 }
 
 .about-me {
-  background: #ffeaea;
+  background: #fff;
+  color: #252525;
 }
 
 .article {
   background: #eaf9ff;
+}
+
+.dark-bg {
+  color: #fff;
+  background: #252525;
 }
